apps/multimedia/manifests/readarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: readarr
    app.kubernetes.io/part-of: readarr
    app.kubernetes.io/version: develop-0.3.26.2526-ls107
  name: readarr
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: readarr
      app.kubernetes.io/part-of: readarr
  serviceName: readarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: readarr
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: readarr
        app.kubernetes.io/part-of: readarr
        app.kubernetes.io/version: develop-0.3.26.2526-ls107
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
            - name: PUID
              value: "1000"
            - name: GUID
              value: "1000"
          image: lscr.io/linuxserver/readarr:develop-0.3.26.2526-ls107
          imagePullPolicy: IfNotPresent
          name: readarr
          ports:
            - containerPort: 8787
              name: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 2
            tcpSocket:
              port: http
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 300m
              memory: 350Mi
            requests:
              cpu: 100m
              memory: 130Mi
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /multimedia
              name: multimedia
            - mountPath: /download
              name: downloads
        - args:
            - readarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1
          name: exportarr
          ports:
            - containerPort: 9708
              name: metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: metrics
            periodSeconds: 10
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 1m
              memory: 11Mi
          volumeMounts:
            - mountPath: /app
              name: config
              readOnly: true
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      serviceAccountName: readarr
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: books
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
