apps/multimedia/manifests/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multimedia-svc
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: readarr
    app.kubernetes.io/part-of: readarr
    app.kubernetes.io/version: 0.3.21-develop
  name: readarr
  namespace: multimedia
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.95
  ports:
    - name: http
      port: 8787
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9708
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: readarr
    app.kubernetes.io/part-of: readarr
  sessionAffinity: None
  type: LoadBalancer
