apps/multimedia/manifests/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: readarr
    app.kubernetes.io/part-of: readarr
    app.kubernetes.io/version: develop-0.3.26.2526-ls107
  name: readarr
  namespace: multimedia
spec:
  ingressClassName: private
  rules:
    - host: readarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: readarr
                port:
                  number: 8787
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - readarr.ankhmorpork.thaum.xyz
      secretName: readarr-ankhmorpork-thaum-xyz-tls
